# cashwises-rust-backend

./: .dockerignore  .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.no_api.yml  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-0fd0cddb6f8fb3ce641bc0db28f240da4365a4b690e70c9a26adaf844c49c01e.json  query-18a29f34ec8df6250772b90a632432a528a1e9e8d691fa5b41bf06376534167a.json  query-1b02f72d531d276c6d3cf1132629e26490c12e1ae681892095894bbb308285ae.json  query-2cd09d9013ecba7de11fedc99fcc8d37deceee4ec2267dc032f63f692f151348.json  query-30a2d31f35017cfeb779eedd1380fea09d90ee94f0b75044fd8af90820981189.json  query-33478ea52ba82633125b8456272dbc7e43edc446c62f282f1ef652f0321b81f0.json  query-33e7d629af8116b1d45d358aa12a9ce956e3f8a32cc5d561edfd7cdbbacc638e.json  query-3cc811d1bb6437c9d46ad5f540f4d09684a3e11bea89891e07018ce272f068ad.json  query-3dabe6a509f31f49474a459024c26771ce3ca0b507f4a481a29c33b55a5299db.json  query-3eb3fe66457b322f476765e615b94ec1bc3423fb4e9e41ab09e82a1383094f36.json  query-507754b7766604888208a8d63a7a1fe49fb8de3fb5ac90b88e580bf5e80761e0.json  query-515673232ba78ff6486fb87d65c473ebff278ac68b9ea6e57989a909d8b22728.json  query-5a0e41af5927771534d0eb4b23492c426f571adb5f3dcf3d1c74ad473e742317.json  query-5d1f09de41aae5ea85952b5268547e58ab5448b7c3882d4a0547006107109fda.json  query-5f0acb0983e8c804e925353716f908605bf0c615b7cb903ef978ba6d0897018c.json  query-641a8bcee126a1b048475fc3c1a03b8af7b23de53c88d1c689aaea39fc84471c.json  query-6bcc2b51ee3a493ee1377859b4ecf62db662620e2bb56370185f6d20be659e3e.json  query-6da66628bbe46d60930950cf9ab81432f98a96daf03a822a12d66e575cb43acb.json  query-72da861866c312fbd015993d8951ef9407769f0900262700f12b0b8491f9064a.json  query-73b3eb208ac501cbb67b633b75e8c84bd41311350c5538793daaeb45433c56d2.json  query-767ba957f0a9d15c528090457809022f671fe792df8bef5880915b23618ed59a.json  query-7996fa009d5f144d2aa3cd61f646a857a855c0b60e02ef25d6c71afcc08f35f2.json  query-7c2b2c064fe4adf6e50a505120acdc9c58eb07f88a420b8ff4f03f6542324347.json  query-83bd0b8c7fb67b1dafb2cfc8733c41f83d468aa626aef2f7a7810fbf561e1b40.json  query-86c57d246171a45fe56eefa6c0ef3587c954f7a40c5cad83f3cf717c77b6a7df.json  query-8f105cf508ac86447092bc6c96d328cb278d660702aea6cffc9a71c7df2b1b82.json  query-8fcb530b0a51a5f2171e4773bf2f279509829ee9c103772e80216d19cbbcf715.json  query-8fd6cd21bdbef653c5a921615d65656fe3592659e6babc4c057535b73481d6cb.json  query-940c651962ebdf963a110fa970fc1158aca1719ff0ba1bb027091a669a6eb7a5.json  query-98f994e6db052b07bd1ad1f64ff2fbf3f5f20c0d53919d2133e7774e4a0fa2a0.json  (+13 more)
migrations/: 20240303112845_init.down.sql  (+7 more)
(+42 files in other folders)
