[package]
name = "cashwises-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["fs"] }
argon2 = "0.5.3"
async-trait = "0.1.78"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.28"
image = "0.25.0"
jsonwebtoken = "9.2.0"
mime = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
anyhow = "1.0"
openssl = { version = "0.10.59", features = ["vendored"] }
openssl-probe = "0.1.5"

serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.17.0", features = ["derive"] }
