[package]
name = "cashwises-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["fs", "full"] }
argon2 = "0.5.3"
async-trait = "0.1.78"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
image = "0.25.0"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-probe = "0.1.5"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
handlebars = "5.1.2"
lettre = { version = "0.11.6", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.8.5"
native-tls = "0.2.11"
